# kinnow

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
kinnow/: create_tables.py  repo.py  utils.py
kinnow/api/: router.py
kinnow/api/common/: __init__.py
kinnow/api/device_account/: schemas.py  services.py  views.py
kinnow/api/devices/: schemas.py  services.py  views.py
kinnow/api/system_user/: schemas.py  services.py  views.py
kinnow/api/users/: schemas.py  services.py  views.py
kinnow/api/vendor_type/: services.py  views.py
kinnow/core/: .env-example  app.py  config.py
kinnow/db/models/: device.py  device_account.py  system_user.py  user.py
kinnow/scripts/: kinnow_client.py
