[tool.poetry]
name = "kinnow"
version = "0.1.0"
description = "gui based network deployment"
authors = ["Imran Mohammed, Lakhwinder smagh"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.103.1"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
alembic = "^1.9.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.4.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
netbox-devicetype-importer = "^0.0.6"
uvicorn = "^0.23.2"
gitpython = "^3.1.35"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.11"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
mypy = "^0.991"
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
